refactor: email service refactoring